// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeBranch merges a branch into master 1`] = `
Array [
  Array [
    Object {
      "base": "master",
      "head": "branch",
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;

exports[`mergeBranch merges a branch into the provided base 1`] = `
Array [
  Array [
    Object {
      "base": "dev",
      "head": "branch",
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;
